--- a/src/htdocs/asce7-05.html
+++ b/src/htdocs/asce7-05.html
@@ -133,42 +133,57 @@
 
             <dt id="data-data-sms">sms</dt>
             <dd>
-              Site-modified spectral acceleration value.
+              Site-modified spectral acceleration value
             </dd>
 
             <dt id="data-data-sds">sds</dt>
             <dd>
-              Numeric seismic design value at 0.2 second SA.
+              Numeric seismic design value at 0.2 second SA
+            </dd>
+
+            <dt id="data-data-sdcs">sdcs</dt>
+            <dd>
+              Seismic design category from sds
             </dd>
 
             <dt id="data-data-s1">s1</dt>
             <dd>
-              MCE<sub>R</sub> ground motion. (for 1.0s period)
+              MCE<sub>R</sub> ground motion (for 1.0s period)
             </dd>
 
             <dt id="data-data-fv">fv</dt>
             <dd>
-              Site amplification factor at 1.0 second.
+              Site amplification factor at 1.0 second
             </dd>
 
             <dt id="data-data-sm1">sm1</dt>
             <dd>
-              Site-modified spectral acceleration value.
+              Site-modified spectral acceleration value
             </dd>
 
             <dt id="data-data-sd1">sd1</dt>
             <dd>
-              Numeric seismic design value at 1.0 second SA.
+              Numeric seismic design value at 1.0 second SA
+            </dd>
+
+            <dt id="data-data-sdc1">sdc1</dt>
+            <dd>
+              Seismic design category from sd1
+            </dd>
+
+            <dt id="data-data-sdc">sdc</dt>
+            <dd>
+              Seismic design category from sdcs and sdc1
             </dd>
 
             <dt id="data-data-tl">t-sub-l</dt>
             <dd>
-              Long-period transition period.
+              Long-period transition period
             </dd>
 
             <dt id="data-data-sdSpectrum">sdSpectrum</dt>
             <dd>
-              Seismic design spectrum.
+              Seismic design spectrum
             </dd>
 
             <dt id="data-data-smSpectrum">smSpectrum</dt>
@@ -182,40 +197,11 @@
         <dt>metadata</dt>
         <dd>
           <dl>
-            <dt id="data-metadata-s1MaxDirection">s1MaxDirFactor</dt>
+            <dt id="data-metadata-spatialInterpolationMethod">
+              spatialInterpolationMethod
+            </dt>
             <dd>
-              Factor applyed to the geometric mean ground motion to get max
-              direction ground motion. (1.0 second)
-            </dd>
-
-            <dt id="data-metadata-s1dPercentile">s1dPercentileFactor</dt>
-            <dd>
-              Factor applyed to 50% ground motion to achieve target percentile
-              ground motion. (1.0 second)
-            </dd>
-
-            <dt id="data-metadata-s1dFloor">s1dFloor</dt>
-            <dd>
-              Minimum constraint placed on the deterministic ground motion.
-              (1.0 second)
-            </dd>
-
-            <dt id="data-metadata-ssMaxDirection">ssMaxDirFactor</dt>
-            <dd>
-              Factor applyed to the geometric mean ground motion to get
-              max direction ground motion. (0.2 second)
-            </dd>
-
-            <dt id="data-metadata-ssPercentile">ssdPercentileFactor</dt>
-            <dd>
-              Factor applyed to 50% ground motion to achieve target percentile
-              ground motion. (0.2 second)
-            </dd>
-
-            <dt id="data-metadata-ssdFloor">ssdFloor</dt>
-            <dd>
-              Minimum constraint placed on the deterministic ground motion.
-              (0.2 second)
+               Spatial interpolation method.
             </dd>
           </dl>
         </dd>
