--- a/src/htdocs/asce41-13.html
+++ b/src/htdocs/asce41-13.html
@@ -16,6 +16,20 @@
     <h1>ASCE 41-13 Documentation</h1>
   </header>
 
+  <div>
+    <p class="alert warning">
+      This software is preliminary or provisional and is subject to revision.
+      It is being provided to meet the need for timely best science. The
+      software has not received final approval by the U.S. Geological Survey
+      (USGS). No warranty, expressed or implied, is made by the USGS or the
+      U.S. Government as to the functionality of the software and related
+      material nor shall the fact of release constitute any such warranty.
+      The software is provided on the condition that neither the USGS nor the
+      U.S. Government shall be held liable for any damages resulting from the
+      authorized or unauthorized use of the software.
+    </p>
+  </div>
+
   <h2 id="parameters">Request Parameters</h2>
   <p>Required parameters</p>
   <dl>
