--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -52,11 +52,14 @@
     <li><a href="nehrp-2015.html">2015 NEHRP Standard (NEHRP-2015)</a></li>
   </ul>
   <h4>IBC</h4>
-    <ul>
+  <ul>
     <li><a href="ibc-2012.html">2012 IBC Standard (IBC-2012)</a></li>
     <li><a href="ibc-2015.html">2015 IBC Standard (IBC-2015)</a></li>
   </ul>
-
+  <h4>AASHTO</h4>
+  <ul>
+    <li><a href="aashto-2009.html">2009 AASHTO Standard (AASHTO-2009)</a></li>
+  </ul>
   <h2>Component Data End Points</h2>
   <ul>
     <li><a href="deterministic.html">Deterministic</a></li>
