--- a/src/htdocs/asce7-10.html
+++ b/src/htdocs/asce7-10.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <title>Design Endpoint Documentation</title>
+  <title>Design Web Service Documentation</title>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -13,7 +13,7 @@
 <body>
 <main>
   <header>
-    <h1>ASCE7-10 Endpoint Documentation</h1>
+    <h1>ASCE7-10 Web Service Documentation</h1>
   </header>
 
   <div class="alert warning">
